Add Cutting Words grapple checks
